# ixp-agents-demo

./: .env.example  .gitignore  README.md  index.html  landing.css  pyproject.toml  requirements.txt
.claude/commands/: visual-lint.md
cloud-api-smoke/shared-kswic-correspondence-smoke-agent/: README.md  entry-points.json  input.sample.json  main.py  pyproject.toml  uipath.json
demo_resources/: README.md  synthetic_ground_truth.jsonl  synthetic_ixp_output.json  synthetic_packet.txt
demo_resources/kswic-payer-correspondence-demo/: README.md  ground_truth.jsonl  ixp_extraction_contract.json  packet_manifest.json  scenario_catalog.json  simulated_ixp_output.json  simulated_maestro_run.json
demo_resources/synthetic-ixp-walkthrough/: comparison_dashboard.html  comparison_summary.md  document_summary.csv  field_results.csv  source_manifest.json  synthetic_deeprag_results.json  (+3 more)
document_ixp_sanity/: README.md  annotation_schema.md  evaluator.py  main.py  mapping_config.example.json  validators.py
document_review_agent_demo/: README.md  input.sample.json  main.py
maestro-process-tests/shared-kswic-correspondence-maestro-test/: Process.bpmn  README.md  entry-points.json  input.sample.json  pyproject.toml  uipath.json
scripts/: bootstrap_uipath.sh  build_kswic_payer_correspondence_demo.py  build_synthetic_ixp_walkthrough.py  deploy_shared_kswic_cloud_tests.sh  kswic_live_ixp_adapter.py  run_live_um_intake_kswic_demo.py  run_shared_kswic_cloud_smoke.py  setup_shared_kswic_cloud_tests.py  uipath_auth.sh  uipath_cloud_auth.py
tests/: test_live_ixp_adapter.py  test_shared_kswic_smoke_agent.py
(+57 files in other folders)
