[project]
name = "shared-kswic-correspondence-smoke-agent"
version = "0.1.1"
description = "Deterministic KSWIC payer-correspondence smoke agent for Shared-folder cloud testing"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "UiPath HLS SE" }]
dependencies = [
    "pydantic>=2,<3",
    "uipath==2.10.48",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
